# CASTING

./: README.md  citations.bib  pyproject.toml  requirements.txt  setup.py
CASTING/: MCTS.py  __init__.py  aseEamEvaluate.py  clusterfun.py  lammpsEvaluate.py  perturb.py  utilis.py  writer.py
C_dataset/: info.csv
docs/: Example1.md  Example2.md  Installation.md  README.md  _coverpage.md  _sidebar.md  citation.md  index.html  prerequisites.md  running-the-code.md
example/: RunOPt.py  extract.py  in.data  log.lammps  log.screen  min.geo
example/structures/: 0.POSCAR  1.POSCAR  2.POSCAR  3.POSCAR  4.POSCAR  5.POSCAR  6.POSCAR  7.POSCAR  8.POSCAR  9.POSCAR
notebooks/: Au.eam  Au_example_Ase.ipynb
post/: Createstruct.py
