[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "CASTING"
version = "0.1.1"
authors = [
  { name="Suvo Banik", email="sbanik2@uic.edu" },
]
dependencies = [
            "ase>=3.21.1",
            "networkx>=2.0",
            "numpy>=1.23.1",
            "pandas>=1.4.3",
            "pymatgen>=2022.7.25",
            "scipy>=1.8.0",
            "tqdm>=4.64.0"
]
description = "A continuous action space tree search for inverse design (CASTING)"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

