[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "CASTING"
version = "0.1.3"
authors = [
  { name="Suvo Banik", email="sbanik2@uic.edu" },
]
dependencies = [
                    "ase==3.22.1",
                    "mendeleev==0.13.1",
                    "networkx==2.8.4",
                    "numpy==1.24.3",
                    "pandas==1.4.4",
                    "pymatgen==2023.2.22",
                    "scipy==1.9.1",
                    "tqdm==4.64.1",

]
description = "A continuous action space tree search for inverse design (CASTING)"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

